# MLOps_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  command.py  commands.py  data.dvc  dataclass.py  pyproject.toml  requirements.txt
.dvc/: config
cat_breed_detection/: train.py
cats_breed_detection/: dataclass.py  export_model.py  infer.py  model.py  utils.py
config/: config.yaml
recommendations/: config.yaml  data.py  infer.py  model.py  train.py  utils.py
