[tool.poetry]
name = "cinema_recomendatins"
version = "0.1.0"
description = ""
authors = ["kustss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
torch = "^2.4.1"
torchvision = "^0.19.1"
requests = "^2.32.3"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
