[tool.poetry]
name = "weather_classifier"
version = "0.1.0"
description = "Predicts the weather"
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = "^2.1.2"
hydra-core = "^1.3.2"
lightning = "^2.1.3"
mlflow = "^2.9.2"
dvc = {extras = ["gdrive"], version = "^3.36.1"}
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
tritonclient = "^2.41.0"
gevent = "^23.9.1"
geventhttpclient = "^2.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
